--- a/404.html
+++ b/404.html
@@ -1,118 +1,101 @@
 <!--
-Author: W3layouts
-Author URL: http://w3layouts.com
-License: Creative Commons Attribution 3.0 Unported
-License URL: http://creativecommons.org/licenses/by/3.0/
+	Author: W3layouts
+	Author URL: http://w3layouts.com
+	License: Creative Commons Attribution 3.0 Unported
+	License URL: http://creativecommons.org/licenses/by/3.0/
 -->
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="zxx">
 
 <head>
-	<title>Trade A Business Category Flat Bootstarp Resposive Website Template | About :: w3layouts</title>
-	<link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
-	<link href="css/style.css" rel="stylesheet" type="text/css" media="all" />
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<meta name="keywords" content="Trade Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
-Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
-	<script
-		type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-	<link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300,400,600,700,900' rel='stylesheet'
-		type='text/css'>
-	<script src="js/jquery.min.js"></script>
+    <title>Core Login Form Flat Responsive Widget Template :: w3layouts</title>
+    <!-- Meta-Tags -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8">
+    <meta name="keywords"
+        content="Core Login Form a Responsive Web Template, Bootstrap Web Templates, Flat Web Templates, Android Compatible Web Template, Smartphone Compatible Web Template, Free Webdesigns for Nokia, Samsung, LG, Sony Ericsson, Motorola Web Design">
+    <script>
+        addEventListener("load", function () {
+            setTimeout(hideURLbar, 0);
+        }, false);
+
+        function hideURLbar() {
+            window.scrollTo(0, 1);
+        }
+    </script>
+    <!-- //Meta-Tags -->
+    <!-- Index-Page-CSS -->
+    <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
+    <!-- //Custom-Stylesheet-Links -->
+    <!--fonts -->
+    <link href="//fonts.googleapis.com/css?family=Mukta+Mahee:200,300,400,500,600,700,800" rel="stylesheet">
+    <!-- //fonts -->
+    <!-- Font-Awesome-File -->
+    <link rel="stylesheet" href="css/font-awesome.css" type="text/css" media="all">
 </head>
 
 <body>
-	<!-- header -->
-	<div class="container">
-		<div class="header">
-			<div class="logo">
-				<a href="index.html"><img src="images/baktelecom logo.jpg" class="img-responsive" alt="" /></a>
-			</div>
-			<div class="nav-top">
-				<div class="head-nav">
-					<span class="menu"> </span>
-					<ul class="cl-effect-16">
-						<li><a href="index.html" data-hover="HOME">Ana Səhifə</a></li>
-						<li><a href="about.html" data-hover="ABOUT">Haqqında</a></li>
-						<li><a href="services.html" data-hover="SERVICES">Xidmət</a></li>
-						<li><a href="404.html" data-hover="SOLUTIONS">Ödəmə</a></li>
-						<li><a href="contact.html" data-hover="CONTACT">Əlaqə</a></li>
-						<div class="clearfix"> </div>
-					</ul>
-				</div>
-			</div>
-			<div class="clearfix"> </div>
-			<!-- script-for-nav -->
-			<script>
-				$("span.menu").click(function () {
-					$(".head-nav ul").slideToggle(300, function () {
-						// Animation complete.
-					});
-				});
-			</script>
-			<!-- script-for-nav -->
-		</div>
-	</div>
-	<div class="banner1">
-		<div class="container">
+    <h1 class="title-agile text-center">Əsas giriş forması</h1>
+    <div class="content-w3ls">
+        <div class="agileits-grid">
+            <div class="content-top-agile">
+                <h2>Daxil olun</h2>
+            </div>
+            <div class="content-bottom">
+                <form action="#" method="post">
+                    <div class="field_w3ls">
+                        <div class="field-group">
+                            <input name="text1" id="text1" type="text" value="" placeholder="Ad" required>
+                            <br>
+                        </div>
+                        <br>
+                        <div class="field-group">
+                            <input id="password-field" type="password" class="form-control" name="password" value=""
+                                placeholder="Parol">
+                            <span toggle="#password-field" class="fa fa-fw fa-eye field-icon toggle-password"></span>
+                            <br>
+                        </div>
+                        <br>
+                    </div>
+                    <div class="wthree-field">
+                        <input id="saveForm" name="saveForm" type="submit" value="Login" />
+                        <br>
+                    </div>
+                    <br>
+                    <ul class="list-login">
+                        <li>
+                            <a href="#" class="text-right">Parolu unutmusunuz?</a>
+                        </li>
+                    </ul>
+                </form>
+            </div>
+            <br>
+            <!-- //content bottom -->
+        </div>
+    </div>
+    <div class="copyright text-center">
+        <p>Designed by: Huseynli Togrul &copy; 2023
+            <a href="https://www.baktelecom.az/rxm">BAKTELECOM</a>
+        </p>
+    </div>
+    <!--//copyright-->
+    <script src="js/jquery-2.2.3.min.js"></script>
+    <!-- script for show password -->
+    <script>
+        $(".toggle-password").click(function () {
 
-		</div>
-	</div>
-	<!-- header -->
-	<div class="container">
-		<div class="content-top1">
-			<div class="content">
-				<h2>Ödəmə</h2>
-				<div class="biography">
-					<div class="biographys">
-						<div class="col-md-8 biography-into">
-							<h4>Ödəniş metodları barədə məlumat</h4>
-							<ul>
-								<li><h3>Onlayn ödəmə</h3></li>
-								<li><h3>Azərpoçt MMC-nin poçt filiallarında və şöbələrində</h3></li>
-							</ul>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="biographys">
-						<div class="col-md-8 biography-into">
-							<h4>Ödəniş metodları barədə məlumat</h4>
-							<ul>
-								<li><h3>"Şəbəkə" xidmət mərkəzlərində</h3></li>
-								<h5>*Hüquqi şəxslər xaric</h5>
-								<li><h3>Banklarda</h3></li>
-								<li><h3>Rabitə xidmətləri mərkəzlərində</h3></li>
-							</ul>
-						</div>
-						<div class="col-md-4 biography-info">
-							<img src="images/a2.jpg" class="img-responsive" alt="" />
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-					<div class="biographys">
-						<div class="col-md-4 biography-info">
-							<img src="images/a3.jpg" class="img-responsive" alt="" />
-						</div>
-						<div class="col-md-8 biography-into">
-							<h4>Ödəniş metodları barədə məlumat</h4>
-							<ul>
-								<li><h3>Ödəmə terminallarında (paypoint)</h3></li>
-							</ul>
-						</div>
-						<div class="clearfix"> </div>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
-	<!-- footer -->
-	<div class="footer">
-		<div class="container">
-			<p>Designed by: Huseynli Toghrul &COPY; 2023</p>
-		</div>
-	</div>
-	<!-- footer -->
+            $(this).toggleClass("fa-eye fa-eye-slash");
+            var input = $($(this).attr("toggle"));
+            if (input.attr("type") == "password") {
+                input.attr("type", "text");
+            } else {
+                input.attr("type", "password");
+            }
+        });
+    </script>
+    <!-- /script for show password -->
+
 </body>
+<!-- //Body -->
 
 </html>
