--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		<div class="content-top4">
 			<div class="content">
 				<div class="error-404 text-center">
-					<h1>3 saylı</h1>
+					<h2 class="one">3 saylı</h2>
 					<h2>Rabitə Xidmətləri Mərkəzi</h2>
 					<p>ATS 371,372,373,379</p>
 					<a class="b-home" href="https://www.baktelecom.az/rxm">BAKTELECOM</a>
