--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="content">
 				<div class="error-404 text-center">
 					<h2 class="one">3 saylı</h2>
-					<h2>Rabitə Xidmətləri Mərkəzi</h2>
-					<p>ATS 371,372,373,379</p>
+					<h5>Rabitə Xidmətləri Mərkəzi</h5>
+					<h6>ATS 371,372,373,379</h6>
 					<a class="b-home" href="https://www.baktelecom.az/rxm">BAKTELECOM</a>
 				</div>
 			</div>
